// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Addon ui should accept an icon: Component: Addon with icon 1`] = `
<InputGroupAddon
  addonType="append"
  className=""
  tag="div"
>
  <Button
    className="not-clickable"
    color="primary"
    tabIndex={-1}
    tag="button"
    type="button"
  >
    <Icon
      icon="face"
    />
  </Button>
</InputGroupAddon>
`;

exports[`Component: Addon ui should accept text: Component: Addon with text 1`] = `
<InputGroupAddon
  addonType="prepend"
  className=""
  tag="div"
>
  <Button
    className="not-clickable"
    color="danger"
    tabIndex={-1}
    tag="button"
    type="button"
  >
    bitcoin
  </Button>
</InputGroupAddon>
`;
